refactor(push-service): convert service helpers to kotlin