@@ -7,7 +7,7 @@ import org.apache.thrift.TBase;
 
 /* JADX INFO: loaded from: miuipushsdkshared_3_7_9.jar:org/apache/thrift/meta_data/FieldMetaData.class */
 public class FieldMetaData implements Serializable {
-    private static Map<Class<? extends TBase>, Map<?, FieldMetaData>> structMap = new HashMap();
+    private static Map<Class<? extends TBase>, Map<?, FieldMetaData>> structMap = new HashMap<>();
     public final String fieldName;
     public final byte requirementType;
     public final FieldValueMetaData valueMetaData;
@@ -25,11 +25,9 @@ public class FieldMetaData implements Serializable {
     public static Map<?, FieldMetaData> getStructMetaDataMap(Class<? extends TBase> cls) {
         if (!structMap.containsKey(cls)) {
             try {
-                cls.newInstance();
-            } catch (IllegalAccessException e) {
-                throw new RuntimeException("IllegalAccessException for TBase class: " + cls.getName() + ", message: " + e.getMessage());
-            } catch (InstantiationException e2) {
-                throw new RuntimeException("InstantiationException for TBase class: " + cls.getName() + ", message: " + e2.getMessage());
+                cls.getDeclaredConstructor().newInstance();
+            } catch (ReflectiveOperationException e) {
+                throw new RuntimeException("Failed to initialize TBase class: " + cls.getName() + ", message: " + e.getMessage());
             }
         }
         return structMap.get(cls);
